Clear test code

--- a/index.html
+++ b/index.html
@@ -13,26 +13,15 @@
         <section class="section">
             <div class="section__content">
             <form class="form">
-                <input class="form__input" type="text" value="Redux">
-                <ul class="response-list">
-                    <li class="response-list__item">Redux</li>
-                    <li class="response-list__item">Redux-think</li>
-                    <li class="response-list__item">Redux-actions</li>
-                </ul>
+                <input class="form__input" type="text">
+                <ul class="response-list"></ul>
             </form>
             </div>
         </section>
         <section class="section">
             <div class="section__content">
             <ul class="rep-list">
-                <li class="rep-list__item">
-                    <ul class="rep-data-list">
-                        <li class="rep-data-list__item">Name: react</li>
-                        <li class="rep-data-list__item">Owner: facebook</li>
-                        <li class="rep-data-list__item">Stars: 145231</li>
-                    </ul>
-                    <button class="rep-list__delete-item"></button>
-                </li>
+                <li class="rep-list__item"></li>
             </ul>
             </div>
         </section>
