--- a/index.html
+++ b/index.html
@@ -12,17 +12,15 @@
     <main class="main">
         <section class="section">
             <div class="section__content">
-            <form class="form">
-                <input class="form__input" type="text">
-                <ul class="response-list"></ul>
-            </form>
+                 <form class="form">
+                     <input class="form__input" type="text">
+                     <ul class="response-list"></ul>
+                 </form>
             </div>
         </section>
         <section class="section">
             <div class="section__content">
-            <ul class="rep-list">
-                <li class="rep-list__item"></li>
-            </ul>
+                <ul class="rep-list"></ul>
             </div>
         </section>
     </main>
